--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
             -   name: Grant execute permission for gradlew
                 run: chmod +x gradlew
             -   name: Build the Jar
-                run: './gradlew eternalreports:shadowJar'
+                run: './gradlew shadowJar'
             -   name: Upload a Build Artifact
                 uses: actions/upload-artifact@v3.1.1
                 with:
