--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,14 @@
+# intellij
+*.iml
+*.ipr
+*.iws
 .idea/
-*.class
-*.log
-*.ctxt
-.mtj.tmp/
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-hs_err_pid*
-replay_pid*
-.gradle
-**/build/
-!src/**/build/
-gradle-app.setting
-.gradletasknamecache
-.project
-.classpath
+.gradle/
+run/
+out/
+build/
+
 .DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+[Dd]esktop.ini
+
+!gradle/wrapper/gradle-wrapper.jar
